--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yes</title>
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container header__container">
@@ -19,5 +21,51 @@
             </div>
         </div>
     </header>
+    <main class="main">
+        <section class="hero">
+            <div class="container hero__container">
+                <img src="/img/bus.png" class="hero__image" alt="Автобус">
+                <h1 class="visually-hidden">Ускоренный курс английского языка</h1>
+                <h2 class="title hero__title-small">Ускоренный</h2>
+                <h2 class="title hero__title">2-месячный курс английского языка</h2>
+                <p class="hero__descr">Освойте английский для путешествий и&nbsp;научитесь объясняться в любой ситуации
+                </p>
+                <button class="hero__btn btn-fill btn">Записаться на пробное занятие</button>
+            </div>
+        </section>
+        <section class="situations">
+            <div class="container situations__container">
+                <h2 class="title situations__title">Бывали ли вы в подобных ситуациях</h2>
+                <div class="situations__list">
+                    <div class="situations__item situations__item-1">
+                        <p class="situations__descr situations__descr-1">Вы думали, что знаете английский, но в
+                            гостинице с
+                            трудом выговариваете,
+                            какой номер вам нужен</p>
+                        <img src="/img/2block-1.png" class="situations__img situations__img-1" alt="Airport">
+                    </div>
+                    <div class="situations__item situations__item-2">
+                        <img src="/img/2block-2.png" class="situations__img situations__img-2" alt="Compass">
+                        <p class="situations__descr situations__descr-2">Вы смогли спросить, до&nbsp;какой&nbsp;станции
+                            метро нужно дойти, но не поняли, куда вас отправили</p>
+                    </div>
+                    <div class="situations__item situations__item-3">
+                        <p class="situations__descr situations__descr-3">В аэропорту при любом подозрении
+                            на задрежку, вы ищите представителя,
+                            хоть как-то говорящего по-русски</p>
+                        <img src="/img/2block-3.png" class="situations__img situations__img-3" alt="Man">
+                    </div>       
+                    <div class="situations__item situations__item-4">
+                        <img src="/img/2block-4.png" class="situations__img situations__img-4" alt="Feet">
+                        <p class="situations__descr situations__descr-4">Все это портит впечатление 
+                            от отдыха и отбивает желание посещать новые страны</p>
+                        </div>
+                </div>
+                
+                
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
