two sections done

--- a/index.html
+++ b/index.html
@@ -54,15 +54,123 @@
                             на задрежку, вы ищите представителя,
                             хоть как-то говорящего по-русски</p>
                         <img src="/img/2block-3.png" class="situations__img situations__img-3" alt="Man">
-                    </div>       
+                    </div>
                     <div class="situations__item situations__item-4">
                         <img src="/img/2block-4.png" class="situations__img situations__img-4" alt="Feet">
-                        <p class="situations__descr situations__descr-4">Все это портит впечатление 
+                        <p class="situations__descr situations__descr-4">Все это портит впечатление
                             от отдыха и отбивает желание посещать новые страны</p>
-                        </div>
+                    </div>
                 </div>
-                
-                
+            </div>
+        </section>
+        <section class="about">
+            <div class="container about__container">
+                <h2 class="title about__title">Мы предусмотрели эти ситуации</h2>
+                <img src="/img/3block.png" alt="Walk" class="about__img">
+                <div class="about__list">
+                    <div class="about__item">
+                        <p class="about__item-title">Значение</p>
+                        <p class="about__item-descr">Разбираем те ситуации,
+                            с которыми сталкивается путешественник</p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__item-title">Понимание</p>
+                        <p class="about__item-descr">Учим объясняться сами
+                            и понимать, что говорят
+                            другие</p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__item-title">Практика</p>
+                        <p class="about__item-descr">Проводим диалоги
+                            с преподавателями
+                            и носителями языка</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="teachers">
+            <div class="container teachers__container">
+                <h2 class="title teachers__title">Кто ведет курс</h2>
+                <div class="teachers__list">
+                    <div class="teachers__item teachers__item-1">
+                        <img src="/img/teacher-1.png" class="teachers__img" alt="Алла Ристовская">
+                        <p class="teachers__name">Алла Ристовская</p>
+                        <p class="teachers__descr">Занимается преподаванием английского языка с 2007 года. За 7 лет
+                            практики Алла занималась более чем с 80 студентами.</p>
+                        <p class="teachers__descr">Очень любит путешествовать: неоднократно бывала зарубежом, проходила
+                            практику в США
+                            (Нью-Йорк) и Великобритании (Лондон).</p>
+                    </div>
+                    <div class="teachers__item teachers__item-2">
+                        <img src="/img/teacher-2.png" class="teachers__img" alt="Анастасия Левчук">
+                        <p class="teachers__name">Анастасия Левчук</p>
+                        <p class="teachers__descr">Закончила Алтайскую Государственную педагогическую Академию по
+                            специальности "теория и методика преподавания иностранных языков и культур".</p>
+                        <p class="teachers__descr">Также имеется дополнительная квалификация "переводчик в сфере
+                            профессиональной
+                            коммуникации".</p>
+                    </div>
+                    <div class="teachers__item teachers__item-3">
+                        <img src="/img/teacher-3.png" class="teachers__img" alt="Евгений Пак">
+                        <p class="teachers__name">Евгений Пак</p>
+                        <p class="teachers__descr">Сетифицированный спеуиалист (диплом ОмГПУ, TTC в Кембридже, TESOL в
+                            Лондоне). Имеет богатый опыт работы на английском языке: от обучения в языковых школах до
+                            выполнения функции переводчика на различных конференциях.</p>
+                        <p class="teachers__descr">Более года Евгений жил в г. Сиэтл (США).</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="programm">
+            <div class="container programm__container">
+                <h2 class="title programm__title">Что входит в стоимость</h2>
+                <div class="programm__about">
+                    <p class="programm__about-price">21 000 рублей</p>
+                    <p class="programm__about-descr">Вы пройдете 2-месячную программу по 2 занятия в неделю, в конце
+                        каждой из которых сможете самостоятельно построить диалог</p>
+                    <ul class="programm__about-list">
+                        <li class="programm__about-item">
+                            <p class="programm__item-title">1 неделя - аэропорт</p>
+                            <p class="programm__item-descr">Вылет-прилет, регистрация, специальный и пограничный,
+                                потеря багажа, задержка рейса</p>
+                        </li>
+                        <li class="programm__about-item">
+                            <p class="programm__item-title">2 неделя - дорога, трансфер</p>
+                            <p class="programm__item-descr">Поиск транспорта, пункты назначения, общение с водителем
+                                (уточнения, просьбы, остановки)</p>
+                        </li>
+                        <li class="programm__about-item">
+                            <p class="programm__item-title">3 неделя - гостиница, ночлег</p>
+                            <p class="programm__item-descr">Поиск ночлега, бронирование, уточнение условий проживания,
+                                решение проблем с персоналом</p>
+                        </li>
+                        <li class="programm__about-item">
+                            <p class="programm__item-title">4 неделя - культурный отдых</p>
+                            <p class="programm__item-descr">Покупка билетов, туров, уточнение обстоятельств, потеря
+                                напарника, сопровождающего.</p>
+                        </li>
+                        <li class="programm__about-item">
+                            <p class="programm__item-title">5 неделя - местность, поиск</p>
+                            <p class="programm__item-descr">Выяснение дороги, направления, местонахождения (собственного
+                                и необходимых мест)</p>
+                        </li>
+                        <li class="programm__about-item">
+                            <p class="programm__item-title">6 неделя - магазины</p>
+                            <p class="programm__item-descr">Выбор, общение с продавцами, выяснение цены, торг, покупка,
+                                возврат, случаи мошеничества</p>
+                        </li>
+                        <li class="programm__about-item">
+                            <p class="programm__item-title">7 неделя - общение с местными</p>
+                            <p class="programm__item-descr">Непринужденные беседы, вопросы, просьбы о помощи, совместный
+                                обед, времяпрепровождения</p>
+                        </li>
+                        <li class="programm__about-item">
+                            <p class="programm__item-title">8 неделя - неожиданные ситуации</p>
+                            <p class="programm__item-descr">Разбор непредвиденных случаев (потеря документов, обращение
+                                в полицию, скорую)</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
