programm section done

--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
             </div>
         </section>
         <section class="programm">
+            <svg>
+                <img src="/img/bagel-grey-big.svg" class="programm__bagel-grey"  alt="">
+            </svg>
+            <svg>
+                <img src="/img/bagel-blue-big.svg" class="programm__bagel-blue"  alt="">
+            </svg>
+            <svg>
+                <img src="/img/wave.svg" class="programm__wave"  alt="">
+            </svg>
             <div class="container programm__container">
                 <h2 class="title programm__title">Что входит в стоимость</h2>
                 <div class="programm__about">
