how section done

--- a/index.html
+++ b/index.html
@@ -122,15 +122,7 @@
             </div>
         </section>
         <section class="programm">
-            <svg>
-                <img src="/img/bagel-grey-big.svg" class="programm__bagel-grey"  alt="">
-            </svg>
-            <svg>
-                <img src="/img/bagel-blue-big.svg" class="programm__bagel-blue"  alt="">
-            </svg>
-            <svg>
-                <img src="/img/wave.svg" class="programm__wave"  alt="">
-            </svg>
+
             <div class="container programm__container">
                 <h2 class="title programm__title">Что входит в стоимость</h2>
                 <div class="programm__about">
@@ -179,6 +171,50 @@
                                 в полицию, скорую)</p>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <img src="/img/bagel-grey-big.svg" class="programm__bagel-grey" alt="">
+            <img src="/img/bagel-blue-big.svg" class="programm__bagel-blue" alt="">
+            <img src="/img/wave.svg" class="programm__wave" alt="">
+        </section>
+        <section class="how">
+            <div class="container how__container">
+                <h2 class="title how__title">Как все будет пор ходить</h2>
+                <div class="how_list">
+                    <div class="how__item how__item-1">
+                        <div class="how__item-about how__item-about-1">
+                            <p class="how__item-title">Простое запоминание</p>
+                            <p class="how__item-descr">Слова запоминаются в результате упрощенных техник и применения в
+                                спонтанных ситуациях,
+                                а&nbsp;не посредством зубрежки</p>
+                        </div>
+                        <img src="/img/5block-1.png" class="how__item-img" alt="Man">
+                    </div>
+                    <div class="how__item how__item-2">
+                        <img src="/img/5block-2.png" class="how__item-img how__item-img-2" alt="group">
+                        <div class="how__item-about how__item-about-2">
+                            <p class="how__item-title">Импровизация и диалоги</p>
+                            <p class="how__item-descr">Форма импровизации позволяет подготовиться
+                                к ситуации, когда шаблонные ответы
+                                будут&nbsp;неприменимы</p>
+                        </div>
+                    </div>
+                    <div class="how__item how__item-3">
+                        <div class="how__item-about how__item-about-3">
+                            <p class="how__item-title">Говорим и слушаем</p>
+                            <p class="how__item-descr">Прослушивание себя и профессионалов позволит
+                                научиться воспринимать чужую речь на слух</p>
+                        </div>
+                        <img src="/img/5block-3.png" class="how__item-img" alt="Listen">
+                    </div>
+                    <div class="how__item how__item-4">
+                        <img src="/img/5block-4.png" class="how__item-img how__item-img-4" alt="Talk">
+                        <div class="how__item-about how__item-about-4">
+                            <p class="how__item-title">Повторение</p>
+                            <p class="how__item-descr">Каждое следующее занятие включает в себя закрепление предыдущих тем и
+                                создает базу для&nbsp;прохождения следующих</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
