reviews done, footer started

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yes</title>
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
+    <link rel="stylesheet" href="/swiper/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -179,7 +180,7 @@
         </section>
         <section class="how">
             <div class="container how__container">
-                <h2 class="title how__title">Как все будет пор ходить</h2>
+                <h2 class="title how__title">Как все будет проходить</h2>
                 <div class="how_list">
                     <div class="how__item how__item-1">
                         <div class="how__item-about how__item-about-1">
@@ -211,14 +212,154 @@
                         <img src="/img/5block-4.png" class="how__item-img how__item-img-4" alt="Talk">
                         <div class="how__item-about how__item-about-4">
                             <p class="how__item-title">Повторение</p>
-                            <p class="how__item-descr">Каждое следующее занятие включает в себя закрепление предыдущих тем и
+                            <p class="how__item-descr">Каждое следующее занятие включает в себя закрепление предыдущих
+                                тем и
                                 создает базу для&nbsp;прохождения следующих</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="reviews">
+            <div class="container reviews__container">
+                <h2 class="title reviews__title">Отзывы студентов</h2>
+                <div class="reviews__slider-container">
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                    <div class="reviews__swiper-container">
+                        <div class="reviews__swiper-wrapper">
+                            <div class="reviews__swiper-slide">
+                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <div class="reviews__info">
+                                    <p class="reviews__name">Александра Иванова</p>
+                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
+                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
+                                        к нам для нарабатывания практики общения.</p>
+                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
+                                        речь у всех разная, но
+                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
+                                        собой пожилая пара в качестве переводчика.</p> 
+                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
+                                </div>
+                            </div>
+                            <div class="reviews__swiper-slide">
+                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <div class="reviews__info">
+                                    <p class="reviews__name">Александра Иванова</p>
+                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
+                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
+                                        к нам для нарабатывания практики общения.</p>
+                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
+                                        речь у всех разная, но
+                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
+                                        собой пожилая пара в качестве переводчика.</p> 
+                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
+                                </div>
+                            </div>
+                            <div class="reviews__swiper-slide">
+                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <div class="reviews__info">
+                                    <p class="reviews__name">Александра Иванова</p>
+                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
+                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
+                                        к нам для нарабатывания практики общения.</p>
+                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
+                                        речь у всех разная, но
+                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
+                                        собой пожилая пара в качестве переводчика.</p> 
+                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
+                                </div>
+                            </div>
+                            <div class="reviews__swiper-slide">
+                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <div class="reviews__info">
+                                    <p class="reviews__name">Александра Иванова</p>
+                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
+                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
+                                        к нам для нарабатывания практики общения.</p>
+                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
+                                        речь у всех разная, но
+                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
+                                        собой пожилая пара в качестве переводчика.</p> 
+                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
+                                </div>
+                            </div>
+                            <div class="reviews__swiper-slide">
+                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <div class="reviews__info">
+                                    <p class="reviews__name">Александра Иванова</p>
+                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
+                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
+                                        к нам для нарабатывания практики общения.</p>
+                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
+                                        речь у всех разная, но
+                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
+                                        собой пожилая пара в качестве переводчика.</p> 
+                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
+                                </div>
+                            </div>
+                            <div class="reviews__swiper-slide">
+                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <div class="reviews__info">
+                                    <p class="reviews__name">Александра Иванова</p>
+                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
+                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
+                                        к нам для нарабатывания практики общения.</p>
+                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
+                                        речь у всех разная, но
+                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
+                                        собой пожилая пара в качестве переводчика.</p> 
+                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-scrollbar"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sign-up">
+            <div class="container sign-up__container">
+                <img src="/img/airplane.png" class="sign-up__img" alt="Самолет">
+                <div class="sign-up__info">
+                    <h2 class="title sign-up__title">Бесплатное пробное занятие</h2>
+                    <p class="sign-up__descr">Приходите на бесплатное первое занятие по теме “аэропорт” и ощутите пользу сразу!</p>
+                    <button class="btn btn-fill sign-up__btn">Записаться на пробное занятие</button>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container footer__container">
+            <ul class="footer__socials-list">
+                <li class="footer__socials-link">
+                    <a href="https://www.vk.com/" class="footer__socials--vk" target="_blank" rel="noopener"></a>
+                </li>
+                <li class="footer__socials-link">
+                    <a href="https://www.instagram.com/" class="footer__socials--inst" target="_blank" rel="noopener"></a>
+                </li>
+                <li class="footer__socials-link">
+                    <a href="https://www.youtube.com/" class="footer__socials--yt" target="_blank" rel="noopener"></a>
+                </li>
+                <li class="footer__socials-link">
+                    <a href="https://www.ok.ru/" class="footer__socials--ok" target="_blank" rel="noopener"></a>
+                </li>
+            </ul>
+            <div class="footer__contact">
+                <a href="#" class="logo footer__logo">
+                    <img src="/img/logo.png" alt="Логотип">
+                </a>
+                <p class="footer__desr">Школа  Английского Языка</p>
+                <div class="footer__info">
+                    <span class="address">г. Москва ул. Северная, 35</span>
+                    <a href="tel:+794546-54-67" class="tel">+7 (945) 46-54-67</a>
+                    <button class="footer__btn btn">Заказать звонок</button>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="/swiper/swiper-bundle.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
