--- a/index.html
+++ b/index.html
@@ -331,30 +331,32 @@
     </main>
     <footer class="footer">
         <div class="container footer__container">
-            <ul class="footer__socials-list">
-                <li class="footer__socials-link">
-                    <a href="https://www.vk.com/" class="footer__socials--vk" target="_blank" rel="noopener"></a>
-                </li>
-                <li class="footer__socials-link">
-                    <a href="https://www.instagram.com/" class="footer__socials--inst" target="_blank" rel="noopener"></a>
-                </li>
-                <li class="footer__socials-link">
-                    <a href="https://www.youtube.com/" class="footer__socials--yt" target="_blank" rel="noopener"></a>
-                </li>
-                <li class="footer__socials-link">
-                    <a href="https://www.ok.ru/" class="footer__socials--ok" target="_blank" rel="noopener"></a>
-                </li>
-            </ul>
-            <div class="footer__contact">
-                <a href="#" class="logo footer__logo">
-                    <img src="/img/logo.png" alt="Логотип">
-                </a>
-                <p class="footer__desr">Школа  Английского Языка</p>
+            <div class="footer__socials">
+                <ul class="footer__socials-list">
+                    <li class="footer__socials-link">
+                        <a href="https://www.vk.com/" class="footer__socials--vk" target="_blank" rel="noopener"></a>
+                    </li>
+                    <li class="footer__socials-link">
+                        <a href="https://www.instagram.com/" class="footer__socials--inst" target="_blank" rel="noopener"></a>
+                    </li>
+                    <li class="footer__socials-link">
+                        <a href="https://www.youtube.com/" class="footer__socials--yt" target="_blank" rel="noopener"></a>
+                    </li>
+                    <li class="footer__socials-link">
+                        <a href="https://www.ok.ru/" class="footer__socials--ok" target="_blank" rel="noopener"></a>
+                    </li>
+                </ul>
                 <div class="footer__info">
                     <span class="address">г. Москва ул. Северная, 35</span>
                     <a href="tel:+794546-54-67" class="tel">+7 (945) 46-54-67</a>
                     <button class="footer__btn btn">Заказать звонок</button>
                 </div>
+            </div>
+            <div class="footer__logo">
+                <a href="#" class="logo footer__logo-link">
+                    <img src="/img/logo.png" class="footer__img" alt="Логотип">
+                    <p class="footer__desr">Школа  Английского Языка</p>
+                </a>
             </div>
         </div>
     </footer>
