--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yes</title>
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
-    <link rel="stylesheet" href="/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/media.css">
+    <link rel="stylesheet" href="swiper/swiper-bundle.min.css">
 </head>
 
 <body>
     <header class="header">
         <div class="container header__container">
             <a href="#" class="logo header__logo">
-                <img src="/img/logo.png" alt="Логотип">
+                <picture>
+                    <source media="(max-width:1400px)" srcset="img/logo-tablet.png">
+                    <img src="img/logo.png" class="header__logo-img" alt="Логотип">
+                </picture>
             </a>
             <div class="contact header__contact">
                 <span class="address">г. Москва ул. Северная, 35</span>
@@ -25,13 +29,19 @@
     <main class="main">
         <section class="hero">
             <div class="container hero__container">
-                <img src="/img/bus.png" class="hero__image" alt="Автобус">
-                <h1 class="visually-hidden">Ускоренный курс английского языка</h1>
-                <h2 class="title hero__title-small">Ускоренный</h2>
-                <h2 class="title hero__title">2-месячный курс английского языка</h2>
-                <p class="hero__descr">Освойте английский для путешествий и&nbsp;научитесь объясняться в любой ситуации
-                </p>
-                <button class="hero__btn btn-fill btn">Записаться на пробное занятие</button>
+                <picture>
+                    <source media="(max-width:1600px)" srcset="img/bus-tablet.png">
+                    <img src="img/bus.png" class="hero__image" alt="Автобус">
+                </picture>
+                <div class="hero__info">
+                    <h1 class="visually-hidden">Ускоренный курс английского языка</h1>
+                    <h2 class="hero__title-small">Ускоренный</h2>
+                    <h2 class="title hero__title">2-месячный курс английского языка</h2>
+                    <p class="hero__descr">Освойте английский для путешествий и&nbsp;научитесь объясняться в любой
+                        ситуации
+                    </p>
+                    <button class="hero__btn btn-fill btn">Записаться на пробное занятие</button>
+                </div>
             </div>
         </section>
         <section class="situations">
@@ -43,10 +53,10 @@
                             гостинице с
                             трудом выговариваете,
                             какой номер вам нужен</p>
-                        <img src="/img/2block-1.png" class="situations__img situations__img-1" alt="Airport">
+                        <img src="img/2section-1.png" class="situations__img situations__img-1" alt="Airport">
                     </div>
                     <div class="situations__item situations__item-2">
-                        <img src="/img/2block-2.png" class="situations__img situations__img-2" alt="Compass">
+                        <img src="img/2section-2.png" class="situations__img situations__img-2" alt="Compass">
                         <p class="situations__descr situations__descr-2">Вы смогли спросить, до&nbsp;какой&nbsp;станции
                             метро нужно дойти, но не поняли, куда вас отправили</p>
                     </div>
@@ -54,10 +64,10 @@
                         <p class="situations__descr situations__descr-3">В аэропорту при любом подозрении
                             на задрежку, вы ищите представителя,
                             хоть как-то говорящего по-русски</p>
-                        <img src="/img/2block-3.png" class="situations__img situations__img-3" alt="Man">
+                        <img src="img/2section-3.png" class="situations__img situations__img-3" alt="Man">
                     </div>
                     <div class="situations__item situations__item-4">
-                        <img src="/img/2block-4.png" class="situations__img situations__img-4" alt="Feet">
+                        <img src="img/2section-4.png" class="situations__img situations__img-4" alt="Feet">
                         <p class="situations__descr situations__descr-4">Все это портит впечатление
                             от отдыха и отбивает желание посещать новые страны</p>
                     </div>
@@ -65,9 +75,9 @@
             </div>
         </section>
         <section class="about">
+            <img src="img/3section.png" alt="Walk" class="about__img">
             <div class="container about__container">
                 <h2 class="title about__title">Мы предусмотрели эти ситуации</h2>
-                <img src="/img/3block.png" alt="Walk" class="about__img">
                 <div class="about__list">
                     <div class="about__item">
                         <p class="about__item-title">Значение</p>
@@ -94,7 +104,7 @@
                 <h2 class="title teachers__title">Кто ведет курс</h2>
                 <div class="teachers__list">
                     <div class="teachers__item teachers__item-1">
-                        <img src="/img/teacher-1.png" class="teachers__img" alt="Алла Ристовская">
+                        <img src="img/teacher-1.png" class="teachers__img" alt="Алла Ристовская">
                         <p class="teachers__name">Алла Ристовская</p>
                         <p class="teachers__descr">Занимается преподаванием английского языка с 2007 года. За 7 лет
                             практики Алла занималась более чем с 80 студентами.</p>
@@ -103,7 +113,7 @@
                             (Нью-Йорк) и Великобритании (Лондон).</p>
                     </div>
                     <div class="teachers__item teachers__item-2">
-                        <img src="/img/teacher-2.png" class="teachers__img" alt="Анастасия Левчук">
+                        <img src="img/teacher-2.png" class="teachers__img" alt="Анастасия Левчук">
                         <p class="teachers__name">Анастасия Левчук</p>
                         <p class="teachers__descr">Закончила Алтайскую Государственную педагогическую Академию по
                             специальности "теория и методика преподавания иностранных языков и культур".</p>
@@ -112,7 +122,7 @@
                             коммуникации".</p>
                     </div>
                     <div class="teachers__item teachers__item-3">
-                        <img src="/img/teacher-3.png" class="teachers__img" alt="Евгений Пак">
+                        <img src="img/teacher-3.png" class="teachers__img" alt="Евгений Пак">
                         <p class="teachers__name">Евгений Пак</p>
                         <p class="teachers__descr">Сетифицированный спеуиалист (диплом ОмГПУ, TTC в Кембридже, TESOL в
                             Лондоне). Имеет богатый опыт работы на английском языке: от обучения в языковых школах до
@@ -174,9 +184,9 @@
                     </ul>
                 </div>
             </div>
-            <img src="/img/bagel-grey-big.svg" class="programm__bagel-grey" alt="">
-            <img src="/img/bagel-blue-big.svg" class="programm__bagel-blue" alt="">
-            <img src="/img/wave.svg" class="programm__wave" alt="">
+            <img src="img/bagel-grey-big.svg" class="programm__bagel-grey" alt="">
+            <img src="img/bagel-blue-big.svg" class="programm__bagel-blue" alt="">
+            <img src="img/wave.svg" class="programm__wave" alt="">
         </section>
         <section class="how">
             <div class="container how__container">
@@ -189,10 +199,10 @@
                                 спонтанных ситуациях,
                                 а&nbsp;не посредством зубрежки</p>
                         </div>
-                        <img src="/img/5block-1.png" class="how__item-img" alt="Man">
+                        <img src="img/5section-1.png" class="how__item-img how__item-img-1" alt="Man">
                     </div>
                     <div class="how__item how__item-2">
-                        <img src="/img/5block-2.png" class="how__item-img how__item-img-2" alt="group">
+                        <img src="img/5section-2.png" class="how__item-img how__item-img-2" alt="group">
                         <div class="how__item-about how__item-about-2">
                             <p class="how__item-title">Импровизация и диалоги</p>
                             <p class="how__item-descr">Форма импровизации позволяет подготовиться
@@ -206,10 +216,10 @@
                             <p class="how__item-descr">Прослушивание себя и профессионалов позволит
                                 научиться воспринимать чужую речь на слух</p>
                         </div>
-                        <img src="/img/5block-3.png" class="how__item-img" alt="Listen">
+                        <img src="img/5section-3.png" class="how__item-img how__item-img-3" alt="Listen">
                     </div>
                     <div class="how__item how__item-4">
-                        <img src="/img/5block-4.png" class="how__item-img how__item-img-4" alt="Talk">
+                        <img src="img/5section-4.png" class="how__item-img how__item-img-4" alt="Talk">
                         <div class="how__item-about how__item-about-4">
                             <p class="how__item-title">Повторение</p>
                             <p class="how__item-descr">Каждое следующее занятие включает в себя закрепление предыдущих
@@ -229,7 +239,7 @@
                     <div class="reviews__swiper-container">
                         <div class="reviews__swiper-wrapper">
                             <div class="reviews__swiper-slide">
-                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -243,7 +253,7 @@
                                 </div>
                             </div>
                             <div class="reviews__swiper-slide">
-                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -257,7 +267,7 @@
                                 </div>
                             </div>
                             <div class="reviews__swiper-slide">
-                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -271,7 +281,7 @@
                                 </div>
                             </div>
                             <div class="reviews__swiper-slide">
-                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -285,7 +295,7 @@
                                 </div>
                             </div>
                             <div class="reviews__swiper-slide">
-                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -299,7 +309,7 @@
                                 </div>
                             </div>
                             <div class="reviews__swiper-slide">
-                                <img src="/img/review.png" alt="Отзыв" class="reviews__img">
+                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
                                 <div class="reviews__info">
                                     <p class="reviews__name">Александра Иванова</p>
                                     <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
@@ -320,10 +330,11 @@
         </section>
         <section class="sign-up">
             <div class="container sign-up__container">
-                <img src="/img/airplane.png" class="sign-up__img" alt="Самолет">
+                <img src="img/airplane.png" class="sign-up__img" alt="Самолет">
                 <div class="sign-up__info">
                     <h2 class="title sign-up__title">Бесплатное пробное занятие</h2>
-                    <p class="sign-up__descr">Приходите на бесплатное первое занятие по теме “аэропорт” и ощутите пользу сразу!</p>
+                    <p class="sign-up__descr">Приходите на бесплатное первое занятие по теме “аэропорт” и ощутите пользу
+                        сразу!</p>
                     <button class="btn btn-fill sign-up__btn">Записаться на пробное занятие</button>
                 </div>
             </div>
@@ -332,36 +343,39 @@
     <footer class="footer">
         <div class="container footer__container">
             <div class="footer__socials">
+                <div class="footer__logo">
+                    <a href="#" class="logo footer__logo-link">
+                        <img src="img/logo.png" class="footer__img" alt="Логотип">
+                        <p class="footer__descr">Школа Английского Языка</p>
+                        <span class="footer__address--tablet">г. Москва ул. Северная, 35</span>
+                    </a>
+                </div>
                 <ul class="footer__socials-list">
                     <li class="footer__socials-link">
                         <a href="https://www.vk.com/" class="footer__socials--vk" target="_blank" rel="noopener"></a>
                     </li>
                     <li class="footer__socials-link">
-                        <a href="https://www.instagram.com/" class="footer__socials--inst" target="_blank" rel="noopener"></a>
+                        <a href="https://www.instagram.com/" class="footer__socials--inst" target="_blank"
+                            rel="noopener"></a>
                     </li>
                     <li class="footer__socials-link">
-                        <a href="https://www.youtube.com/" class="footer__socials--yt" target="_blank" rel="noopener"></a>
+                        <a href="https://www.youtube.com/" class="footer__socials--yt" target="_blank"
+                            rel="noopener"></a>
                     </li>
                     <li class="footer__socials-link">
                         <a href="https://www.ok.ru/" class="footer__socials--ok" target="_blank" rel="noopener"></a>
                     </li>
                 </ul>
                 <div class="footer__info">
-                    <span class="address">г. Москва ул. Северная, 35</span>
-                    <a href="tel:+794546-54-67" class="tel">+7 (945) 46-54-67</a>
+                    <span class="footer__address">г. Москва ул. Северная, 35</span>
+                    <a href="tel:+794546-54-67" class="tel footer__tel">+7 (945) 46-54-67</a>
                     <button class="footer__btn btn">Заказать звонок</button>
                 </div>
             </div>
-            <div class="footer__logo">
-                <a href="#" class="logo footer__logo-link">
-                    <img src="/img/logo.png" class="footer__img" alt="Логотип">
-                    <p class="footer__desr">Школа  Английского Языка</p>
-                </a>
-            </div>
         </div>
     </footer>
-    <script src="/swiper/swiper-bundle.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="swiper/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
