--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="container header__container">
             <a href="#" class="logo header__logo">
                 <picture>
+                    <source media="(max-width:768px)" srcset="img/logo.png">
                     <source media="(max-width:1400px)" srcset="img/logo-tablet.png">
                     <img src="img/logo.png" class="header__logo-img" alt="Логотип">
                 </picture>
@@ -79,18 +80,18 @@
             <div class="container about__container">
                 <h2 class="title about__title">Мы предусмотрели эти ситуации</h2>
                 <div class="about__list">
-                    <div class="about__item">
+                    <div class="about__item about__item-1">
                         <p class="about__item-title">Значение</p>
                         <p class="about__item-descr">Разбираем те ситуации,
                             с которыми сталкивается путешественник</p>
                     </div>
-                    <div class="about__item">
+                    <div class="about__item about__item-2">
                         <p class="about__item-title">Понимание</p>
                         <p class="about__item-descr">Учим объясняться сами
                             и понимать, что говорят
                             другие</p>
                     </div>
-                    <div class="about__item">
+                    <div class="about__item about__item-3">
                         <p class="about__item-title">Практика</p>
                         <p class="about__item-descr">Проводим диалоги
                             с преподавателями
@@ -133,9 +134,8 @@
             </div>
         </section>
         <section class="programm">
-
             <div class="container programm__container">
-                <h2 class="title programm__title">Что входит в стоимость</h2>
+                <h2 class="title programm__title">Что входит в&nbsp;стоимость</h2>
                 <div class="programm__about">
                     <p class="programm__about-price">21 000 рублей</p>
                     <p class="programm__about-descr">Вы пройдете 2-месячную программу по 2 занятия в неделю, в конце
@@ -194,8 +194,9 @@
                 <div class="how_list">
                     <div class="how__item how__item-1">
                         <div class="how__item-about how__item-about-1">
-                            <p class="how__item-title">Простое запоминание</p>
-                            <p class="how__item-descr">Слова запоминаются в результате упрощенных техник и применения в
+                            <p class="how__item-title how__item-title-1">Простое запоминание</p>
+                            <p class="how__item-descr how__item-descr-1">Слова запоминаются в результате упрощенных
+                                техник и применения в
                                 спонтанных ситуациях,
                                 а&nbsp;не посредством зубрежки</p>
                         </div>
@@ -204,16 +205,16 @@
                     <div class="how__item how__item-2">
                         <img src="img/5section-2.png" class="how__item-img how__item-img-2" alt="group">
                         <div class="how__item-about how__item-about-2">
-                            <p class="how__item-title">Импровизация и диалоги</p>
-                            <p class="how__item-descr">Форма импровизации позволяет подготовиться
+                            <p class="how__item-title how__item-title-2">Импровизация и диалоги</p>
+                            <p class="how__item-descr how__item-descr-2">Форма импровизации позволяет подготовиться
                                 к ситуации, когда шаблонные ответы
                                 будут&nbsp;неприменимы</p>
                         </div>
                     </div>
                     <div class="how__item how__item-3">
                         <div class="how__item-about how__item-about-3">
-                            <p class="how__item-title">Говорим и слушаем</p>
-                            <p class="how__item-descr">Прослушивание себя и профессионалов позволит
+                            <p class="how__item-title how__item-title-3">Говорим и слушаем</p>
+                            <p class="how__item-descr how__item-descr-3">Прослушивание себя и профессионалов позволит
                                 научиться воспринимать чужую речь на слух</p>
                         </div>
                         <img src="img/5section-3.png" class="how__item-img how__item-img-3" alt="Listen">
@@ -221,8 +222,9 @@
                     <div class="how__item how__item-4">
                         <img src="img/5section-4.png" class="how__item-img how__item-img-4" alt="Talk">
                         <div class="how__item-about how__item-about-4">
-                            <p class="how__item-title">Повторение</p>
-                            <p class="how__item-descr">Каждое следующее занятие включает в себя закрепление предыдущих
+                            <p class="how__item-title how__item-title-4">Повторение</p>
+                            <p class="how__item-descr how__item-descr-4">Каждое следующее занятие включает в себя
+                                закрепление предыдущих
                                 тем и
                                 создает базу для&nbsp;прохождения следующих</p>
                         </div>
@@ -280,49 +282,8 @@
                                     <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
                                 </div>
                             </div>
-                            <div class="reviews__swiper-slide">
-                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
-                                <div class="reviews__info">
-                                    <p class="reviews__name">Александра Иванова</p>
-                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
-                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
-                                        к нам для нарабатывания практики общения.</p>
-                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
-                                        речь у всех разная, но
-                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
-                                        собой пожилая пара в качестве переводчика.</p> 
-                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
-                                </div>
-                            </div>
-                            <div class="reviews__swiper-slide">
-                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
-                                <div class="reviews__info">
-                                    <p class="reviews__name">Александра Иванова</p>
-                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
-                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
-                                        к нам для нарабатывания практики общения.</p>
-                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
-                                        речь у всех разная, но
-                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
-                                        собой пожилая пара в качестве переводчика.</p> 
-                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
-                                </div>
-                            </div>
-                            <div class="reviews__swiper-slide">
-                                <img src="img/review.png" alt="Отзыв" class="reviews__img">
-                                <div class="reviews__info">
-                                    <p class="reviews__name">Александра Иванова</p>
-                                    <p class="reviews__descr">Курс прошел незаметно и оставил после себя только хорошие
-                                        воспоминания. Нашу группу на постоянной основе вела Алла, Настя и Женя приходили
-                                        к нам для нарабатывания практики общения.</p>
-                                    <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
-                                        речь у всех разная, но
-                                        было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
-                                        собой пожилая пара в качестве переводчика.</p> 
-                                    <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
-                                </div>
-                            </div>
                         </div>
+                        <div class="swiper-pagination"></div>
                         <div class="swiper-scrollbar"></div>
                     </div>
                 </div>
