--- a/index.html
+++ b/index.html
@@ -135,8 +135,13 @@
         </section>
         <section class="programm">
             <div class="container programm__container">
-                <h2 class="title programm__title">Что входит в&nbsp;стоимость</h2>
+                <picture>
+                    <source media="(max-width:1050px)" srcset="/img/bigben-phone.png">
+                    <source media="(max-width:1600px)" srcset="/img/bigben-desktop.png">
+                    <img src="/img/bigben.png" class="programm__img" alt="Бигбен">
+                </picture>
                 <div class="programm__about">
+                    <h2 class="title programm__title">Что входит в&nbsp;стоимость</h2>
                     <p class="programm__about-price">21 000 рублей</p>
                     <p class="programm__about-descr">Вы пройдете 2-месячную программу по 2 занятия в неделю, в конце
                         каждой из которых сможете самостоятельно построить диалог</p>
@@ -250,7 +255,7 @@
                                     <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
                                         речь у всех разная, но
                                         было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
-                                        собой пожилая пара в качестве переводчика.</p> 
+                                        собой пожилая пара в качестве переводчика.</p>
                                     <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
                                 </div>
                             </div>
@@ -264,7 +269,7 @@
                                     <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
                                         речь у всех разная, но
                                         было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
-                                        собой пожилая пара в качестве переводчика.</p> 
+                                        собой пожилая пара в качестве переводчика.</p>
                                     <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
                                 </div>
                             </div>
@@ -278,7 +283,7 @@
                                     <p class="reviews__descr">Неделю назад были с мужем в Лондоне - хоть люди разные и
                                         речь у всех разная, но
                                         было так легко и спокойно! Мы ни разу не заблудились, в аэропорту меня водила за
-                                        собой пожилая пара в качестве переводчика.</p> 
+                                        собой пожилая пара в качестве переводчика.</p>
                                     <p class="reviews__descr">Спасибо вам, это было очень полезно!</p>
                                 </div>
                             </div>
@@ -305,11 +310,11 @@
         <div class="container footer__container">
             <div class="footer__socials">
                 <div class="footer__logo">
-                    <a href="#" class="logo footer__logo-link">
+                    <div class="logo footer__logo-link">
                         <img src="img/logo.png" class="footer__img" alt="Логотип">
                         <p class="footer__descr">Школа Английского Языка</p>
                         <span class="footer__address--tablet">г. Москва ул. Северная, 35</span>
-                    </a>
+                    </div>
                 </div>
                 <ul class="footer__socials-list">
                     <li class="footer__socials-link">
